--- a/sass/utilities/variables.sass
+++ b/sass/utilities/variables.sass
@@ -1,5 +1,14 @@
 @charset "utf-8"
 
+// 颜色
+$black: #000
+
+// 链接颜色
+$link: #558abb !default
+
+// 其它
+$radius-large: 5px !default
+
 // 定义设备宽度阈值（一共提供了 4 个），用在响应式布局上
 // 4 个阈值分成 5 类设备：手机、面板、桌面、宽屏和大屏
 // 在手机和平板设备上（0px ~ 768px）上，宽度为“auto”
