--- a/css/lara.css
+++ b/css/lara.css
@@ -78,4 +78,17 @@
   .column.is-offset-12 {
     margin-left: 100%; }
 
+.box {
+  display: block;
+  padding: 1.25rem;
+  border-radius: 5px;
+  box-shadow: 0 2px 3px rgba(0, 0, 0, 0.1), 0 0 0 1px rgba(0, 0, 0, 0.1); }
+  .box:not(:last-child) {
+    margin-bottom: 1.5rem; }
+
+a.box:hover, a.box:focus {
+  box-shadow: 0 2px 3px rgba(0, 0, 0, 0.1), 0 0 0 1px #558abb; }
+a.box:active {
+  box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.2), 0 0 0 1px #558abb; }
+
 /*# sourceMappingURL=lara.css.map */
