--- a/sass/elements/box.sass
+++ b/sass/elements/box.sass
@@ -1,12 +1,11 @@
 @charset "utf-8"
 
 .box
+  +block
   display: block
   padding: 1.25rem
   border-radius: $radius-large
   box-shadow: 0 2px 3px rgba($black, 0.1), 0 0 0 1px rgba($black, 0.1)
-  &:not(:last-child)
-    margin-bottom: 1.5rem
 
 a.box
   &:hover,
